tests/ui/attributes/rustc_confusables_std_cases.stderr
error[E0599]: no method named `push` found for struct `BTreeSet` in the current scope
  --> $DIR/rustc_confusables_std_cases.rs:6:7
   |
LL |     x.push(1);
   |       ^^^^ method not found in `BTreeSet<_>`
   |
help: you might have meant to use `insert`
   |
LL |     x.insert(1);
   |       ~~~~~~

error[E0599]: no method named `push_back` found for struct `Vec<_>` in the current scope
  --> $DIR/rustc_confusables_std_cases.rs:9:7
   |
LL |     x.push_back(1);
   |       ^^^^^^^^^ method not found in `Vec<_>`
   |
help: you might have meant to use `push`
   |
LL |     x.push(1);
   |       ~~~~

error[E0599]: no method named `push` found for struct `VecDeque` in the current scope
  --> $DIR/rustc_confusables_std_cases.rs:12:7
   |
LL |     x.push(1);
   |       ^^^^ method not found in `VecDeque<_>`
   |
help: you might have meant to use `push_back`
   |
LL |     x.push_back(1);
   |       ~~~~~~~~~

error[E0599]: no method named `length` found for struct `Vec<{integer}>` in the current scope
  --> $DIR/rustc_confusables_std_cases.rs:15:7
   |
LL |     x.length();
   |       ^^^^^^
   |
help: you might have meant to use `len`
   |
LL |     x.len();
   |       ~~~

error[E0599]: no method named `size` found for struct `Vec<{integer}>` in the current scope
  --> $DIR/rustc_confusables_std_cases.rs:17:7
   |
LL |     x.size();
   |       ^^^^
   |
help: you might have meant to use `len`
   |
LL |     x.len();
   |       ~~~
help: there is a method with a similar name
   |
LL |     x.resize();
   |       ~~~~~~

error[E0308]: mismatched types
  --> $DIR/rustc_confusables_std_cases.rs:20:24
   |
LL |     String::new().push("");
   |                   ---- ^^ expected `char`, found `&str`
   |                   |
   |                   arguments to this method are incorrect
   |
note: method defined here
  --> $SRC_DIR/alloc/src/string.rs:LL:COL

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0308, E0599.
For more information about an error, try `rustc --explain E0308`.
